resolved instock check vs order item quantity. Receives the skunames and check availability. sends availability to order-service that willperform the instock verification.