@@ -1,13 +1,13 @@
 package com.shopsmart.inventoryservice.service;
 
 import com.shopsmart.inventoryservice.dto.InventoryResponse;
+import com.shopsmart.inventoryservice.model.Inventory;
 import com.shopsmart.inventoryservice.repository.InventoryRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,13 +16,14 @@ public class InventoryService {
     private final InventoryRepository inventoryRepository;
 
     @Transactional(readOnly = true)
-    public List<InventoryResponse> isInStock(List<String> skuCode) {
-        return inventoryRepository.findBySkuCodeIn(skuCode).stream()
-                .map(inventory ->
-                        InventoryResponse.builder()
-                                .skuCode(inventory.getSkuCode())
-                                .inInStock(inventory.getQuantity() > 0)
-                                .build())
-                .collect(Collectors.toList());
+    public List<InventoryResponse> stockAvailability(List<String> skuCode) {
+        List<Inventory> inventoryList = inventoryRepository.findBySkuCodeIn(skuCode);
+
+        return inventoryList.stream()
+                .map(inventory -> InventoryResponse.builder()
+                        .skuCode(inventory.getSkuCode())
+                        .inStock(inventory.getQuantity())
+                        .build())
+                .toList();
     }
 }
